<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_inicio" />
        <item
            android:id="@+id/nav_password"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_password" />

        <item
            android:id="@+id/nav_empleados"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_empleados" />

        <item
            android:id="@+id/nav_cerrar"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_cerrar" />
    </group>
</menu>
